# JupyterOcean

./: MANIFEST.in  README.md  conver_example.ipynb  convert_example.ipynb  demostration.ipynb  install.json  ocean_algo.py  pyproject.toml  python_to_notebook.py  setup.cfg  setup.py  test_jupyterOcean.ipynb
.ipynb_checkpoints/: convert_example-checkpoint.ipynb  demostration-checkpoint.ipynb  output_script-checkpoint.py  test-checkpoint.ipynb  test_jupyterOcean-checkpoint.ipynb
ipfs_files/brain_and_gpr/: branin.py  gpr.pickle  gpr.py  requirements.txt  test_brain_gpr.ipynb
jupyterOcean/: _version.py  jupyterfrontend.py  ocean_transaction.py
jupyterOcean.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jupyterOcean/labextension/: build_log.json  package.json
jupyterOcean/labextension/static/: lib_index_js.6a507b76b95c388e00f8.js  style.js  (+21 more)
jupyterOcean/python_ocean/: notebook_to_script.j2
lib/: index.d.ts  index.js  index.js.map  ipfs.d.ts  ipfs.js  ipfs.js.map  plugin.d.ts  plugin.js  plugin.js.map  react.d.ts  react.js  react.js.map  version.js  widget.d.ts  widget.js
lib/widgets/: address.js  commands.d.ts  commands.js  frontend.d.ts  frontend.js  frontend.js.map  ocean_publish.js  ocean_publish.js.map  palette.d.ts  palette.js  panel.d.ts  panel.js  panel1.d.ts  panel1.js  sessions.d.ts  sessions.js  shell.d.ts  shell.js  split_panel.d.ts  split_panel.js  title.d.ts  title.js  transaction.js  transaction.js.map
ocean_dockers/: Dockerfile  requirements.txt
src/: index.ts  ipfs.tsx  plugin.ts
src/widgets/: frontend.ts  transaction.ts
(+2 files in other folders)
